gccida/c1/memory_address
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/memory_address/src/explow.c:931:22: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  memory_address( machine_mode mode, rtx x) 
                     ^
                     enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/memory_address/src/explow.c:941:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/memory_address/src/explow.c:946:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/memory_address/src/explow.c:949:4: error: expected ';' after expression
rtx arg1; // [rsp+0h] [rbp-38h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/memory_address/src/explow.c:949:5: error: use of undeclared identifier 'arg1'
rtx arg1; // [rsp+0h] [rbp-38h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/memory_address/src/explow.c:951:1: error: use of undeclared identifier 'arg1'
arg1 = v2; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/memory_address/src/explow.c:967:19: error: use of undeclared identifier 'machine_mode'
v9 = force_reg( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), x); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/memory_address/src/explow.c:1018:29: error: use of undeclared identifier 'machine_mode'
if ( general_operand( v5, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)) ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/memory_address/src/explow.c:1045:1: error: use of undeclared identifier 'arg1'
arg1 = const_int_rtx[64]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/memory_address/src/explow.c:1046:37: error: use of undeclared identifier 'arg1'
v14 = eliminate_constant_term( v5, &arg1); 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/memory_address/src/explow.c:1047:7: error: use of undeclared identifier 'arg1'
v15 = arg1; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/memory_address/src/explow.c:1048:6: error: use of undeclared identifier 'arg1'
if ( arg1 == const_int_rtx[64] 
     ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/memory_address/src/obj/explow.o] Error 1
